<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/radio__width105"
        android:layout_margin="@dimen/padding_xxx"
        android:background="@drawable/ogo" />
    <com.shc.SHC_SS.views.HCTextViewN
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_container_10"
        android:text="@string/logo_text"
        android:textSize="@dimen/textSize_25sp"
        android:textColor="@color/maroo"
        android:padding="@dimen/padding_xxx"
        />

    <com.shc.SHC_SS.views.HCEditTextN
        android:id="@+id/counter_number"
        android:layout_width="@dimen/radio__width120"
        android:layout_height="@dimen/spinner_height"
        android:layout_margin="@dimen/spinner_margin"
        android:background="@drawable/spinner_shape"
        android:hint="@string/coun_number"
        android:inputType="number"
        android:padding="@dimen/padding_xxx"
        android:textColorHint="@color/center_color"
        android:textAlignment="center"

        />

        <com.shc.SHC_SS.views.HCEditTextN
        android:id="@+id/counter_password"
        android:layout_width="@dimen/radio__width120"
        android:layout_height="@dimen/spinner_height"
        android:layout_margin="@dimen/padding_xxx"
        android:background="@drawable/spinner_shape"
        android:hint="@string/coun_password"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:padding="@dimen/padding_xxx"
        android:textColorHint="@color/center_color" />

    <com.shc.SHC_SS.views.HCCheckBoxN
        android:id="@+id/remember_me"
        android:layout_width="@dimen/radio__width105"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_xxx"
        android:buttonTint="@color/center_color"
        android:text="@string/remember_me"
        android:textAlignment="center"
        android:textColor="@color/center_color"

        />

    <com.shc.SHC_SS.views.HCButtonN
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/spinner_height"
        android:layout_margin="@dimen/padding_xxx"
        android:background="@drawable/spinner_shape"
        android:padding="@dimen/padding_xxx"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/center_color"

        />
    </LinearLayout>
</ScrollView>
