<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_xxx"
        android:background="@drawable/ogo" />

    <com.shc.SHC_SS.views.HCTextViewN
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_container_10"
        android:padding="@dimen/padding_xxx"
        android:text="@string/logo_text"
        android:textColor="@color/maroo"
        android:textSize="@dimen/textSize_25sp"

        />
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content">
    <com.shc.SHC_SS.views.HCButtonN
        android:id="@+id/upload_data_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_marginRight="@dimen/radio__width260"
        android:gravity="left"
        android:padding="@dimen/padding_xxx"
        android:textAlignment="center"
        android:text=" حفظ الاستبيانات المكتملة"  />

    <com.shc.SHC_SS.views.HCButtonN
        android:id="@+id/update_app"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="right"
        android:padding="@dimen/padding_xxx"
        android:visibility="visible"
        android:text="تحديث البرنامج  " />
</LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       >

       <com.shc.SHC_SS.views.HCBoldTextViewN
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="@dimen/margin_5"
           android:padding="@dimen/padding_x"
           android:text="@string/family"
           android:textAlignment="center"
           android:textColor="@color/end_color"
           android:id="@+id/upload"
           android:textSize="@dimen/textSize_25sp" />
       <com.shc.SHC_SS.views.HCBoldTextViewN
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="@dimen/margin_5"
           android:padding="@dimen/padding_x"
           android:text="ما تم اضافته الى الخادم:"
           android:textAlignment="center"
           android:textColor="@color/maroo"
           android:textSize="@dimen/textSize_25sp" /> <com.shc.SHC_SS.views.HCBoldTextViewN
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_5"
       android:padding="@dimen/padding_x"
       android:text="@string/family"
       android:id="@+id/not_upload"
       android:textAlignment="center"
       android:textColor="@color/end_color"
       android:textSize="@dimen/textSize_25sp" />

       <com.shc.SHC_SS.views.HCBoldTextViewN
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="@dimen/margin_5"
           android:padding="@dimen/padding_x"
           android:text="ما لم  يتم  اضافته  الى  الخادم: "
           android:textAlignment="center"
           android:textColor="@color/maroo"
           android:textSize="@dimen/textSize_25sp" />
       <com.shc.SHC_SS.views.HCBoldTextViewN
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="@dimen/margin_5"
           android:padding="@dimen/padding_x"
           android:text="@string/family"
           android:id="@+id/all_item"
           android:textAlignment="center"
           android:textColor="@color/end_color"
           android:textSize="@dimen/textSize_25sp" /> <com.shc.SHC_SS.views.HCBoldTextViewN
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_5"
       android:padding="@dimen/padding_x"
       android:text="عدد  الاستبيانات الكلى: "
       android:textAlignment="center"
       android:textColor="@color/maroo"
       android:textSize="@dimen/textSize_25sp" />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:gravity="right"
        android:orientation="horizontal"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/li_family"
            android:visibility="gone"
            >

        <Spinner
            android:id="@+id/sp_family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/num_region"
            android:textSize="@dimen/textSize_25sp"></Spinner>

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/family"
            android:textAlignment="center"
            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/num_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/num_region"
            android:textSize="@dimen/textSize_25sp"></Spinner>

        <com.shc.SHC_SS.views.HCBoldTextViewN

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/num_region"
            android:textAlignment="center"
            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:id="@+id/goverment"
            android:layout_width="@dimen/width80"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="goverment test"
            android:textAlignment="center"
            android:textColor="@color/center_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/governrment"
            android:textAlignment="center"
            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp"

            />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:id="@+id/c_region"
            android:layout_width="@dimen/width80"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="regiontest"
            android:textAlignment="center"

            android:textColor="@color/center_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/region"
            android:textAlignment="center"

            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp" />


    </LinearLayout>

    <include
        android:id="@+id/include2"
        layout="@layout/vertical_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"></include>

    <LinearLayout
        android:id="@+id/section1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_container_10"
        android:gravity="right"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="4">

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:id="@+id/district"
            android:layout_width="@dimen/width80"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:textAlignment="center"

            android:textColor="@color/center_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/dirtrict"
            android:textAlignment="center"

            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN

            android:id="@+id/hara"
            android:layout_width="@dimen/width80"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:textAlignment="center"

            android:textColor="@color/center_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/hara"

            android:textAlignment="center"
            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:id="@+id/mashmol"
            android:layout_width="@dimen/width80"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"

            android:padding="@dimen/padding_x"
            android:text="goverment test"
            android:textAlignment="center"
            android:textColor="@color/center_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/mashmol"
            android:textAlignment="center"

            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp"

            />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:id="@+id/center"
            android:layout_width="@dimen/width80"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="regiontest"

            android:textAlignment="center"
            android:textColor="@color/center_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/center"
            android:textAlignment="center"
            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp" />
    </LinearLayout>

    <include
        android:id="@+id/include1"
        layout="@layout/vertical_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"></include>

    <LinearLayout
        android:id="@+id/section2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_container_10"
        android:gravity="right"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="4">

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:id="@+id/location"
            android:layout_width="@dimen/width80"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="عرض الموقع على الخريطة"
            android:textAlignment="center"
            android:textColor="@color/center_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN

            android:id="@+id/home"
            android:layout_width="@dimen/width80"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:textAlignment="center"
            android:textColor="@color/center_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:id="@+id/building"
            android:layout_width="@dimen/width80"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="goverment test"
            android:textAlignment="center"

            android:textColor="@color/center_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/building"
            android:textAlignment="center"
            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp"

            />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:id="@+id/block"
            android:layout_width="@dimen/width80"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="regiontest"
            android:textAlignment="center"
            android:textColor="@color/center_color"
            android:textSize="@dimen/textSize_25sp" />

        <com.shc.SHC_SS.views.HCBoldTextViewN
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:layout_weight=".5"
            android:padding="@dimen/padding_x"
            android:text="@string/block"
            android:textAlignment="center"
            android:textColor="@color/end_color"
            android:textSize="@dimen/textSize_25sp" />
    </LinearLayout>

    <com.shc.SHC_SS.views.HCButtonN
        android:id="@+id/accept"
        android:layout_width="@dimen/radio__width260"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:text="@string/accept" />


</LinearLayout>
